--- a/estilos.css
+++ b/estilos.css
@@ -1,21 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300&display=swap');
 
 body{
-  font-family: 'Montserrat', sans-serif;
-
-  background-color: white;
-  background-image: 
-    linear-gradient(#ffd6d6 1px, transparent 1px),
-    linear-gradient(90deg, #ffd6d6 1px, transparent 1px);
-    background-size: 20px 20px;
-
+    background:linear-gradient(to bottom, #ec525f,#fe0016);
     margin: 0;
     padding: 0;
+    min-height: 100vh;
 }
 
-main{
-    flex: 1
+/* nav contenedor de todo */ 
+
+.contenedor{
+    background:white;
+    width: 80%;
+    height: 80%;
+    margin: 40px auto;
+    padding: 40px;
 }
+
+/* nav contenedor de todo */ 
 
 
 /* menu */
@@ -26,58 +28,19 @@ main{
     flex-wrap: nowrap;
     justify-content: space-around;
     background-color: #b71422;
-    padding: 10px;
+    padding: 50px;
 }
 
 .menu a{
-
-    color: #ec525f;
+    margin: 0 30px; 
+    color: #ffffff;
+    font-size: 28px;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     text-transform: uppercase;
 }
 
 /* menu */
-
-
-/* Parrafos */
-
-#parrafoIndex{
-    text-align: center;}
-
-h1{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    text-transform: uppercase;
-
-    font-size: 80px;
-    text-align: center;
-}
-
-
-h2{
-    font-size: 40px;
-    text-align: left;
-}
-
-h3{
-    font-size: 25px;
-    text-align: left;
-    color: rgb(37, 37, 37);
-
-}
-
-.parrafoJuego{
-    font-size: 20px;
-    color: gray;
-    margin-top: 10px;
-    margin-top: 0px;
-}
-
-.parrafoFooter{
-    text-align: center;
-    color: black;
-}
 
 /* Footer */
 
@@ -95,6 +58,8 @@ h3{
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     text-transform: uppercase;
+    font-size: 28px;
+    margin: 20px auto;
 }
 
 .footer a{
@@ -107,14 +72,73 @@ h3{
 /* Footer */
 
 
-/* Parrafos */
+/* Contenedor juegos / consolas */
 
-/* Imagenes */
+.contJC{
 
-.imagen{
-    width: 800px;
-    height: 400px;
-    margin-left: 20px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    justify-items: center;
+    align-items:center;
+    gap: 150px;
+    width: 80%;
+    height: fit-content;
+    padding: 20px;
+    margin: 40px auto;
 }
 
-/* Imagenes */
+.contJC img{
+    width: 600px;
+    height: 600px;
+    display: block;
+    border-radius: 10px;
+    object-fit:fill;
+}
+
+.textoJC{
+    position: absolute;
+    background: none;
+    color: white;
+    text-shadow: 2px 2px 6px rgba(0,0,0,0.8); 
+    padding: 0;
+}
+
+.textoJC h2{
+    margin: 0;
+    font-size: 40px;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    color: #b71422;
+}
+
+.textoJC h3{
+    font-family: 'Montserrat', sans-serif;
+    margin: 5px 0 0;
+    font-size: 32px;
+    font-weight: normal;
+    text-transform: uppercase;
+    color: #b71422;
+}
+
+
+/* Contenedor juegos / consolas */
+
+.textoTitulo{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #b71422;
+    text-align: center;
+    font-size: 80px;
+}
+
+#textoIndex {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #b71422;
+    text-align: center;
+    font-size: 50px;
+}
+
