--- a/estilos.css
+++ b/estilos.css
@@ -165,7 +165,6 @@ body{
 
 .textoJC{
     position: absolute;
-    background: none;
     color: white;
     text-shadow: 2px 2px 6px rgba(0,0,0,0.8); 
     padding: 0;
@@ -209,6 +208,15 @@ body{
     color: #b71422;
     text-align: center;
     font-size: 50px;
+}
+
+#imagenIndex{
+    width: auto;
+    height: auto;
+    display: block;
+    margin: 30px auto;  
+    border-radius: 40px;
+    border: 5px solid #b71422;
 }
 
 .contIndividual{
