--- a/estilos.css
+++ b/estilos.css
@@ -10,7 +10,7 @@ body{
 /* nav contenedor de todo */ 
 
 .contenedor{
-    background:linear-gradient(to top, #eb6671,#f8949c);
+    background:linear-gradient(to top, #e94f5c,#f8949c);
     width: 80%;
     height: 80%;
     margin: 80px auto;
@@ -111,13 +111,12 @@ body{
     grid-template-rows: repeat(2,fr);
     justify-items: center;
     align-items:center;
-    gap: 150px;
+    gap: 200px;
     width: 80%;
     height: fit-content;
     padding: 20px;
     margin: 40px auto;
     color: white;
-    text-shadow: 2px 2px 6px rgba(0,0,0,0.8); 
 }
 
 .contF img{
@@ -134,6 +133,7 @@ body{
     font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
     color: #b71422;
+    font-weight: bold;
 }
 
 .contF h3{
@@ -172,14 +172,7 @@ body{
     object-fit:fill;
 }
 
-.textoJC{
-    position: absolute;
-    color: white;
-    text-shadow: 2px 2px 6px rgba(0,0,0,0.8); 
-    padding: 0;
-}
-
-.textoJC h2{
+.contJC h2{
     margin: 0;
     font-size: 40px;
     font-family: 'Montserrat', sans-serif;
@@ -187,7 +180,7 @@ body{
     color: #b71422;
 }
 
-.textoJC h3{
+.contJC h3{
     font-family: 'Montserrat', sans-serif;
     margin: 5px 0 0;
     font-size: 32px;
@@ -234,12 +227,12 @@ body{
     gap: 150px;
     width: fit-content;
     height: fit-content;
-    min-height: 100%;
+    min-height:100%;
     min-width: 100%;
     padding: 20px;
-    margin: 40px auto; 
     background-color: white;
-    border-radius: 20px;
+    border-radius: 40px;
+    border: 5px solid #b71422;
 }
 
 /* Otras clases / tags */
